# OsmAnd-resources

./: .editorconfig  .gitignore  .swp  CMakeLists.txt  LICENSE  README.md  Turn_lanes_test.obf  bundled_assets.json  de_tts.js  embed-resources-chunk.py  embed-resources-chunk.sh  embed-resources.list  embed-resources.py  embed-resources.sh  embed-resources.stamp  list-resources.py  list-resources.sh  pack_rec_voice_std.sh  resources-bundle.cpp  resources-bundle.h  resources.cmake  routing_test.osm  synthetic_test_rendering.osm  synthetic_test_rendering.osm_new  turn_lanes_test.osm  verify-embed-resources-list.py  verify-embed-resources-list.sh
.github/workflows/: generate_osf_file.yml  link-artifacts-in-pr.yml
OpenSeaMap-workspace/: OpenSeaMap-objects.xlsx  OpenSeaMap_(needs-sea-map-downloads).render.xml  rendering_types.xml
astro/: README.md  constellations.json  galaxies_long_list.json  galaxy_clusters.json  globular_clusters.json  hipCatalogWikidata2.json  nebulae.json  open_clusters.json  solar_system.json  stars.json
astro/scripts/: .gitignore  augment_db_articles.py  create_db.py  fetch_deep_sky.py  gen_stars_from_hip.py  milkyway.py
color-palette/: height_altitude_-50_150.txt  height_altitude_-50_2000.txt  height_altitude_0_1000.txt  height_altitude_0_200.txt  height_altitude_0_2000.txt  height_altitude_0_3000.txt  height_altitude_0_4000.txt  height_altitude_0_500.txt  height_altitude_1000_3000.txt  height_altitude_1000_4000.txt  height_altitude_100_300.txt  height_altitude_100_500.txt  height_altitude_2000_4000.txt  height_altitude_300_1000.txt  height_altitude_4000_6500.txt  height_altitude_500_1500.txt  height_altitude_500_2500.txt  hillshade_color_default.txt  hillshade_color_hillshade_plains.txt  hillshade_main_default.txt  hillshade_main_plains.txt  route_ele_default.txt  route_maxspeed_default.txt  route_slope_default.txt  route_speed_default.txt  slope_avalanche.txt  slope_slope_plains.txt  user_palette_default.txt  weather_cloud.txt  weather_precip.txt  weather_pressure.txt  weather_temperature.txt  weather_wind.txt
countries-info/: countries.reginfo  countries.xml  opt-countries.xml  regions.ocbf  regions.ocbf.old  regions.ocbf.readme  regions.xml
da/: ttsconfig.p
help/: changes-1.8.html  changes.html  index.html  osmo-plugin.html  style.css
icons/: .gitignore  LICENSE.icons8.txt
icons/no-svg/: README.txt
icons/svg-res/: .gitignore
icons/tools/: Generating_OSMAND_map_icons.txt  changesize.py  generate_osmc.sh  generate_osmc_svg.sh  generate_osmc_svg_old.sh  generatepng.sh  generatepngall.sh  recolour.sh  recolourtopng.sh  sortfiles.sh
misc/: default.online_tile_sources.xml  tile_sources.xml
models/map_bicycle_location/: map_bicycle_location.mtl
models/map_car_bearing/: map_car_bearing.mtl
models/map_navigation_car/: map_navigation_car.mtl
models/map_navigation_nautical/: map_navigation_nautical.mtl
obf_creation/: address_common_names.xml  place_common_names.xml  places_common_names.xml  rendering_types.xml  rendering_types_us-maps.xml
poi/: activities.json  copy_phrases.sh  poi_categories.json  poi_types.xml  poi_types_us-maps.xml  world_brands.csv
poi/phrases/: README.txt
protos/: .gitignore  OBF.proto  autogen-protobuf-2.5.patch  configure_protobuf.sh  fileformat.proto  osmand_index.proto  osmformat.proto  proto_generate.sh  protobuf-2.5.patch  vector_tile.proto
rendering_styles/: Cycle-map.render.xml  Depends-template.render.xml  High-contrast-roads.render.xml  High-detail-topo.render.xml  LightRS.render.xml  Topo-map-assimilation.render.xml  Touring-view_(more-contrast-and-details).render.xml  UniRS.render.xml  Winter-and-ski.render.xml  build_osf.sh  cityview.render.xml  contourlines.addon.render.xml  cycle_map.render.xml  default.mapStylesPresets.xml  default.map_styles_presets.xml  default.render.xml  default.render_template.xml  depthcontourlines.addon.render.xml  desert.render.xml  hud.render.xml  mapnik.render.xml  marine.render.xml  nautical.render.xml  offroad-bak.render.xml  offroad.render.xml  osm-carto.render.xml  osmassistant.addon.render.xml  padus.addon.render.xml  private-lands.addon.render.xml  publictransportroutes.addon.render.xml  readme.md  regions.render.xml  routes.addon.render.xml  seamap.render.xml  skimap.render.xml  snowmobile.render.xml  standalone-template.render.xml  template.addon.render.xml  test.render.xml  test_screenshot.render.xml  (+6 more)
rendering_styles/drawable-mx/: mx_abandoned_poi.xml  mx_access_private.xml  mx_accomodation.xml  mx_accountant.xml  mx_administrative.xml  mx_advertising_agency.xml  mx_aerialway_cable_car.xml  mx_aerialway_chair_lift.xml  mx_aerialway_drag_lift.xml  mx_aerialway_gondola.xml  mx_aerialway_goods.xml  mx_aerialway_j_bar.xml  mx_aerialway_magic_carpet.xml  mx_aerialway_platter.xml  mx_aerialway_pylon.xml  mx_aerialway_rope_tow.xml  mx_aerialway_t_bar.xml  mx_aerialway_transport.xml  mx_aerodrome_type_military.xml  mx_aeroway_aerodrome.xml  mx_aeroway_aerodrome_small.xml  mx_aeroway_airport.xml  mx_aeroway_fuel.xml  mx_aeroway_gate.xml  mx_aeroway_helipad.xml  mx_aeroway_terminal.xml  mx_agrarian.xml  mx_allotments.xml  mx_amenity_arts_centre.xml  (+1007 more)
routing/: routing- Posteinwurf.xml  routing-Posteinwurf-mod.xml  routing-Posteinwurf.xml  routing.xml  routing_bicycle_old.xml  routing_lowered_links.xml
specialphrases/: parse_map_features  specialphrases_da.txt  specialphrases_de.txt  specialphrases_en.txt  specialphrases_es.txt  specialphrases_fa.txt  specialphrases_fr.txt  specialphrases_ru.txt  specialphrases_sk.txt
specialphrases_obsolete/: parse_map_features_test_input  specialphrases_bg.txt  specialphrases_es.txt  specialphrases_ru.txt
test-resources/: Alarm.obf  Routing_test.obf  Routing_test_20_09_00.obf  Turn_lanes_test.obf  alarm.osm  languages_test.osm  legend.osm  synthetic_test_rendering.osm  test_3d_rendering.json  test_opengl_rendering.json  test_routing.json  test_turn_lanes.json  turn_lanes_test.osm
voice/: .gitignore  OsmAnd-resources - Acceso directo.lnk  README.md  fest.ru.example  gen_all.sh  gen_config.p  gen_diff.sh  gen_voice.sh
(+6969 files in other folders)
